src/snapshots/calculator__snapshot_tests__reporting_tests@too_big_integer.toy.snap
---
source: src/snapshot_tests.rs
expression: "String::from_utf8(output).unwrap()"
input_file: src/snapshot_tests/reporting/too_big_integer.toy
---
Error: number too large to fit in target type
   ╭─[myscript.toy:1:1]
   │
 1 │ var x = 23847294872923429847;
   │         ──────────┬─────────  
   │                   ╰─────────── Invalid integer
   │ 
   │ Note: Larger than maximum positive number which is 9223372036854775807
───╯
